tdf#74693: Footnotes text appearing above footnote separator line

When invalidate a footnoteframe, invalidate also the lower textframe,
so it will be recalculated before text rendering.

Change-Id: I5fd29bdad4afae4947e0701e5727482958453d03
Reviewed-on: https://gerrit.libreoffice.org/45756
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit a172f854b6e1d61bf0fe0fe4efc3058bb7a760bf)